Made CityTable extends AbstractTable for reducing amount of code;